상품 사진 첨부 오류 수정